feat: implantadas as rotas no swagger
